# autoware_rosbags_converter

./: .gitignore  README.md  pyproject.toml
src/autoware_rosbags_converter/: __init__.py  convert_autoware_bag.py  generate_msg_definitions.py  msg_definition_generator.py  typestore.py
src/autoware_rosbags_converter/msg_definitions/: manifest.json
tests/: test_msg_definition_generator.py  test_typestore.py
