[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "autoware-rosbags-converter"
version = "0.1.0"
description = "Tools for conversion of Autoware MCAP/DB3 rosbags, and to generate Autoware ROS message definitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathlib>=1.0.1",
    "pytest>=8.4.2",
    "rosbags>=0.10.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[project.scripts]
generate-msg-definitions = "autoware_rosbags_converter.generate_msg_definitions:main"

[tool.hatch.build.targets.wheel]
package = ["src/autoware_rosbags_converter"]
