[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "autoware-rosbags-converter"
version = "0.1.0"
description = "Tools for conversion of Autoware MCAP/DB3 rosbags, and to generate Autoware ROS message definitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rosbags>=0.10.11",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
generate-msg-definitions = "autoware_rosbags_converter.generate_msg_definitions:main"
convert-autoware-bag = "autoware_rosbags_converter.convert_autoware_bag:main"

[tool.hatch.build]
include = [
  "src/autoware_rosbags_converter/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autoware_rosbags_converter"]

[tool.hatch.build.targets.wheel.force-include]
"src/autoware_rosbags_converter/msg_definitions" = "autoware_rosbags_converter/msg_definitions"

[tool.hatch.build.targets.sdist]
include = [
  "src/autoware_rosbags_converter/**",
  "README.md",
  "pyproject.toml",
]
